Persistent right scrollbar to prevent content shifting

--- a/nailgun/static/css/main.css
+++ b/nailgun/static/css/main.css
@@ -4,6 +4,7 @@ html {
   height: 100%;
 }
 body {
+  overflow-y: scroll;
   background: url(../img/flare.png) no-repeat top center;
   font-family: 'Segoe UI', Helvetica, Georgia, Tahoma, Arial;
   height: 100%;
